--- a/titanic_play/TitanicLazyVersion.ipynb
+++ b/titanic_play/TitanicLazyVersion.ipynb
@@ -27,7 +27,7 @@
     "if nb_dir not in sys.path:\n",
     "    sys.path.append(nb_dir)\n",
     "from base_func import fill_nans, make_prediction, roc_score, make_cats, base_clf_stack, adv_clf_stack\n",
-    "from outliners import plot_outlier\n",
+    "from outliners import plot_outlier, replace_outlier\n",
     "\n",
     "df_train = pd.read_csv(\"train.csv\", index_col=\"PassengerId\")\n",
     "df_test = pd.read_csv(\"test.csv\", index_col=\"PassengerId\")\n",
@@ -302,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
